# LearnOpenGL

./: .gitignore  CMakeLists.txt  rebuild.sh  run.sh
camera/: Camera.h
shaders/: shader.fs  shader.vs
src/: Shader.cpp  Shader.h  main.cpp
